updates for Freezr and prep Personium

--- a/app/views/pages/password.html.erb
+++ b/app/views/pages/password.html.erb
@@ -8,7 +8,7 @@
 	</div>
 
 	<p><%= t('general.enterPassword') %></p>
-	<%= form_with url: topics_path, role: "form" do |form| %>
+	<%= form_with url: tally_path, role: "form" do |form| %>
 		<%= form.hidden_field :PIA_URL, value: @pia_url %>
 		<%= form.hidden_field :APP_KEY, value: @app_key %>
 		<%= form.hidden_field :APP_SECRET, value: @app_secret %>
