--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,43 +1,31 @@
-<header class="navbar">
+<header class="navbar" style="background-color: #F2F3F9;">
     <div class="container">
         <div class="row">
-            <div class="col-xs-2">
-                <% if session[:desktop] == "1" %>
-                    <div class="logo-txt" style="margin-top: -8px;">
-                        <a href="<%= @pia_url || '#' %>" class="font-size-large" style="margin-right: -20px; text-decoration: none; color: #666666;">
-                            <i class="fa fa-arrow-left"></i>
-                        </a>
+            <div class="col-xs-10" style="min-height: 60px; margin-top: 12px;">
+                <div style="white-space: nowrap;">
+                    <div style="display: inline-block;"><%= image_tag 'oyd2.png', style: "height: 60px; margin: -20px -5px -10px -10px; vertical-align: text-bottom;" %></div>
+                    <div style="display: inline-block;">
+                        <h1 class="visible-xs visible-sm hidden-md hiden-lg" style="text-align: left; margin-bottom: 10px; font-size: x-large; padding-right: 110px;"><div class="title-link"><%= t('general.title') %></div></h1>
+                        <h1 class="hidden-xs hidden-sm visible-md visible-lg" style="text-align: left; margin-bottom: 10px; font-size: x-large;"><div class="title-link"><%= t('general.title') %></div></h1>
                     </div>
-                <% else %>
-                    <div class="oyd-logo"></div>
-                <% end %>
+                </div>
             </div>
-            <div class="col-xs-8">
-                <% if session[:desktop] == "1" %>
-                    <h1 style="text-align: center; margin-top: 7px;"><%= t('general.title') %></h1>
-                <% end %>
-            </div>
+
             <div class="col-xs-2">
-                <ul style="float:right; white-space: nowrap;">
-                    <div class="btn-group dropdown" style="margin-top:15px;">
+                <ul style="float:right; white-space: nowrap; text-decoration: none; ">
+                    <div class="btn-group dropdown" style="margin-top:32px;">
                         <a href="#" class="dropdown-toggle fakelink" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-plus"  style="font-size:25px;"></span>
+                            <span class="glyphicon glyphicon-cog"  style="font-size:25px; color: #42B58C;"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><%= link_to t('general.topic'), "#", data: { toggle: "modal", target: "#topicModal"} %></li>
-                        </ul>
-                    </div>
-                    <div class="btn-group dropdown" style="margin-top:15px;">
-                        <a href="#" class="dropdown-toggle fakelink" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-cog"  style="font-size:25px;"></span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <% if params[:operation].to_s == 'edit' %>
-                                <li><%= link_to t('general.stop_edit'), { operation: nil } %></li>
-                            <% else %>
-                                <li><%= link_to t('general.edit'), { operation: 'edit' } %></li>
-                            <% end %>
+                            <li><%= link_to t('general.new_topic'), "#", data: { toggle: "modal", target: "#topicModal"} %></li>
                             <li><%= link_to t('general.configuration_menu'), app_config_path %></li>
+                            <li><%= link_to t('general.to_data_vault'), @pia_url || "#" %></li>
+                            <% if params[:locale].to_s == "en" %>
+                                <li><%= link_to "Sprachauswahl 'Deutsch'", { locale: 'de' } %></li>
+                            <% else %>
+                                <li><%= link_to "switch to 'English'", { locale: 'en' } %></li>
+                            <% end %>
                         </ul>
                     </div>
                 </ul>
