--- a/app/views/pages/app_config.html.erb
+++ b/app/views/pages/app_config.html.erb
@@ -10,7 +10,7 @@
 		    <% end %>
 		</div>
 	</div>
-	<%= form_with url: topics_path, html: { class: "form-horizontal" }, role: "form" do |form| %>
+	<%= form_with url: tally_path, html: { class: "form-horizontal" }, role: "form" do |form| %>
 		<div class="form-group">
 			<label for="pds_type" class="col-sm-3 control-label"><%= t('config.type_label') %>:</label>
 			<div class="col-sm-9">
